--- a/tools/plop-templates/create-new-hook/{{ name }}.ts.hbs
+++ b/tools/plop-templates/create-new-hook/{{ name }}.ts.hbs
@@ -1,14 +1,15 @@
-import { useState, useCallback } from 'react';
+import { IDefaultCallbacks } from '../../types';
+import { MoralisError } from '@moralisweb3/core';
 import { useResolver } from '../../useResolver';
-import { IAction } from './types';
+import { useState, useCallback } from 'react';
 
 export const {{ name }} = () => {
   const resolver = useResolver();
   const [isLoading, setIsLoading] = useState(false);
   const [data, setData] = useState<null | string>(null);
-  const [error, setError] = useState<null | Error>(null);
+  const [error, setError] = useState<undefined | MoralisError>(undefined);
 
-  const action = useCallback(({ onComplete, onError, onSuccess, throwOnError = true }: IAction = {}) => {
+  const action = useCallback(({ onComplete, onError, onSuccess, throwOnError = true }: IDefaultCallbacks<string> = {}) => {
     return resolver(
       () => {
         setIsLoading(true);
@@ -16,8 +17,8 @@ export const {{ name }} = () => {
       },
       {
         _onComplete: () => setIsLoading(false),
-        _onError: (error)  => setError(error),
-        _onSuccess: (data) => setData(data),
+        _onError: setError,
+        _onSuccess: setData,
         onComplete,
         onError,
         onSuccess,
