--- a/demos/nextjs-nextauth-no-be/app/components/modules/Header/Header.module.css
+++ b/demos/nextjs-nextauth-no-be/app/components/modules/Header/Header.module.css
@@ -10,6 +10,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 80px;
   max-width: 1000px;
   width: 100%;
+}
+
+.logo {
+  cursor: pointer;
 }
