feat: auto-generated readme header added

--- a/tools/generators/next/templates/readme/README.md.hbs
+++ b/tools/generators/next/templates/readme/README.md.hbs
@@ -1,6 +1,6 @@
 <div align="center">
     <p align="center">
-      <img src="./docs/MoralisLogo.png" alt="Moralis NextJS" />
+      <img src="./.readme/MoralisLogo.png" alt="Moralis NextJS" />
     </p>
 </div>
 
@@ -18,7 +18,7 @@
 
 > Moralis Hooks for your NextJS project
 
-This project is a thin React wrapper around [Moralis](https://moralis.io/), to easily call functionalities and display data.
+This project is a thin NextJS wrapper around [Moralis](https://moralis.io/), to easily call functionalities and display data.
 
 Please check the [official documentation of Moralis](https://docs.moralis.io/) for all the functionalities of Moralis.
 
@@ -39,3 +39,7 @@ yarn add moralis @moralisweb3/next
 ```
 
 > Make sure to also  `moralis` to the latest version, when you update `@moralisweb3/next`.
+
+# Hooks
+
+{{ hook }}
