--- a/packages/codegen/src/generators/next/templates/readme/hook_desc.hbs
+++ b/packages/codegen/src/generators/next/templates/readme/hook_desc.hbs
@@ -1,12 +1,13 @@
 
 ## `{{ hookName }}()` 
 
-Gets all token balances of a current user or specified address. 
+{{ desc }}
 
-### Options:
-- `chain` (optional): The blockchain to get data from. Valid values are listed on the intro page in the Transactions and Balances section. Default value: current chain.
-- `address` (optional): A user address (i.e. 0x1a2b3x...). If specified, the user attached to the query is ignored and the address will be used instead.
-- `to_block` (optional): The block number on which the balances should be checked
+### Params:
+
+```json
+{{ params }}
+```
 
 ### Example:
 ```jsx
@@ -27,21 +28,7 @@ const ERC20Balances = () => {
 ```
 
 ### Example return:
+
 ```json
-{
-  "total": 1,
-  "page": 0,
-  "page_size": 500,
-  "result": [
-    {
-      "token_address": "0x2d30ca6f024dbc1307ac8a1a44ca27de6f797ec22ef20627a1307243b0ab7d09",
-      "name": "Kylin Network",
-      "symbol": "KYL",
-      "logo": "https://cdn.moralis.io/eth/0x67b6d479c7bb412c54e03dca8e1bc6740ce6b99c.png",
-      "thumbnail": "https://cdn.moralis.io/eth/0x67b6d479c7bb412c54e03dca8e1bc6740ce6b99c_thumb.png",
-      "decimals": "18",
-      "balance": "123456789"
-    }
-  ]
-}
+{{ return }}
 ```
