--- a/packages/codegen/src/generators/next/templates/hook/types.ts.hbs
+++ b/packages/codegen/src/generators/next/templates/hook/types.ts.hbs
@@ -1,5 +1,5 @@
 import Moralis from "moralis";
 
-type TSDKCall = typeof Moralis.{{ sdkPath }};
-export type T{{ targetMethod }}Params = Parameters<TSDKCall>[0];
-export type T{{ targetMethod }}Return = ReturnType<NonNullable<Awaited<ReturnType<TSDKCall>>>['toJSON']>;
+type SDKCall = typeof Moralis.{{ sdkPath }};
+export type {{ targetMethod }}Params = Parameters<SDKCall>[0];
+export type {{ targetMethod }}Return = ReturnType<NonNullable<Awaited<ReturnType<SDKCall>>>['toJSON']>;
