--- a/packages/codegen/src/generators/next/templates/hook/{{ hookName }}.ts.hbs
+++ b/packages/codegen/src/generators/next/templates/hook/{{ hookName }}.ts.hbs
@@ -1,13 +1,12 @@
 import { SWRConfiguration } from 'swr/dist/types';
-import { {{ targetMethod }}Params, {{ targetMethod }}Return } from './types'
+import { T{{ targetMethod }}Params, T{{ targetMethod }}Return } from './types'
 import axios from 'axios'
 import useSWR from 'swr';
 
-export const {{ hookName }} = (params: {{ targetMethod }}Params, SWRConfig?: SWRConfiguration) => {
-  const axiosFetcher = async (endpoint: string, fetcherParams: any) =>
-    axios.post(`/api/moralis/${endpoint}`, fetcherParams).then((res) => res.data);
+export const {{ hookName }} = (params: T{{ targetMethod }}Params, SWRConfig?: SWRConfiguration) => {
+  const axiosFetcher = async (endpoint: string, params: any) => axios.post(`/api${endpoint}`, params).then(res => res.data);
 
-  const { data, error, mutate, isValidating } = useSWR<{{ targetMethod }}Return>(
+  const { data, error, mutate, isValidating } = useSWR<T{{ targetMethod }}Return>(
     [`{{ APIEndpoint }}`, params],
     axiosFetcher,
     SWRConfig,
