feat: added @moralisweb3/express codegen

--- a/packages/codegen/src/generators/express/templates/endpoint/endpoint.ts.hbs
+++ b/packages/codegen/src/generators/express/templates/endpoint/endpoint.ts.hbs
@@ -1,1 +1,1 @@
-{{ routerName }}.{{ method }}("{{ urlPattern }}", {{ resolverName }})
+    router.{{ method }}("{{ urlPattern }}", (req, res, next) =>  {{ resolverName }}(req, res, next, this.apiKey))
