--- a/packages/codegen/src/generators/express/templates/endpoint/router.ts.hbs
+++ b/packages/codegen/src/generators/express/templates/endpoint/router.ts.hbs
@@ -3,6 +3,18 @@ import {
   // Resolvers import
 } from './resolvers';
 
-export const {{ name }} = Router();
+export class {{ name }} {
+  private apiKey: string;
 
-// Routes
+  constructor(apiKey: string) {
+    this.apiKey = apiKey;
+  }
+
+  public getRouter() {
+    const router = Router();
+
+    // Routes
+  
+    return router;
+  }
+}
