--- a/packages/codegen/src/generators/express/templates/endpoint/resolver.ts.hbs
+++ b/packages/codegen/src/generators/express/templates/endpoint/resolver.ts.hbs
@@ -1,16 +1,16 @@
 import axios from 'axios';
 import { NextFunction, Response, Request } from 'express';
 
-export const {{ resolverName }} = async (req: Request, res: Response, next: NextFunction) => {
+export const {{ resolverName }} = async (req: Request, res: Response, next: NextFunction, apiKey: string) => {
   try {
     const response = await axios.request({
       method: "{{ method }}",
       params: req.query,
-      url: "{{ url }}",
+      url: `{{ url }}`,
       data: req.body,
       headers: {
         'Content-Type': 'application/json',
-        'x-api-key': 'apikey',
+        'x-api-key': apiKey,
       },
     });
     return res.send(response.data);
