--- a/packages/codegen/src/generators/express/templates/endpoint/router.ts.hbs
+++ b/packages/codegen/src/generators/express/templates/endpoint/router.ts.hbs
@@ -1,20 +1,4 @@
-import { Router } from 'express';
-import { 
-  // Resolvers import
-} from './resolvers';
-
-export class {{ name }} {
-  private apiKey: string;
-
-  constructor(apiKey: string) {
-    this.apiKey = apiKey;
-  }
-
-  public getRouter() {
-    const router = Router();
-
-    // Routes
-  
-    return router;
-  }
-}
+import { Router } from 'express'; import { // Resolvers import } from './resolvers'; export class
+{{name}}
+{ private apiKey: string; constructor(apiKey: string) { this.apiKey = apiKey; } public getRouter() { const router =
+Router(); // Routes return router; } }
