--- a/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
+++ b/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
@@ -1,16 +1,16 @@
-import { {{ names.operation }}, {{ names.request }} } from '{{ names.commonUtils }}';
+import { {{ names.operation }}, {{ names.request }}, {{ names.response }} } from '{{ names.commonUtils }}';
 import { SWRConfiguration } from 'swr/dist/types';
 import axios from 'axios';
 import Moralis from 'moralis';
 import useSWR from 'swr';
 
 export const {{ names.hook }} = (request: {{ names.request }}, SWRConfig?: SWRConfiguration) => {
-  const axiosFetcher = async (endpoint: string, fetcherParams: any) => {
-    const jsonResponse = await axios.post(`/api/moralis/${endpoint}`, fetcherParams);
+  const axiosFetcher = async (endpoint: string) => {
+    const jsonResponse = await axios.post(`/api/moralis/${endpoint}`, {{ names.operation }}.serializeRequest(request, Moralis.Core));
     return {{ names.operation }}.deserializeResponse(jsonResponse.data, request, Moralis.Core);
   };
 
-  const { data, error, mutate, isValidating } = useSWR(['{{ url }}', {{ names.operation }}.serializeRequest(request, Moralis.Core)], axiosFetcher, SWRConfig);
+  const { data, error, mutate, isValidating } = useSWR<{{ names.response }}>('{{ url }}', axiosFetcher, SWRConfig);
 
   return {
     data,
