hooks appending added

--- a/packages/codegen/src/next/generators/readme/templates/hook_desc.hbs
+++ b/packages/codegen/src/next/generators/readme/templates/hook_desc.hbs
@@ -1,15 +1,15 @@
 ## `{{ hookName }}()` 
 
-{{ desc }}
+{{ description }}
 
 ### Params:
 
 ```sh
-{{ params }}
+{{ request }}
 ```
 
 ### Example return:
 
 ```json
-{{ return }}
+{{ response }}
 ```
