feat: readme generatign added

--- a/packages/codegen/src/next/generators/readme/templates/hook_desc.hbs
+++ b/packages/codegen/src/next/generators/readme/templates/hook_desc.hbs
@@ -3,13 +3,11 @@
 {{ description }}
 
 ### Params:
-
-```sh
+```ts
 {{ request }}
 ```
 
-### Example return:
-
-```json
+### Response:
+```ts
 {{ response }}
 ```
