replaced request types to interfaces to be able read them programtically

--- a/packages/codegen/src/next/generators/readme/templates/hook_desc.hbs
+++ b/packages/codegen/src/next/generators/readme/templates/hook_desc.hbs
@@ -2,12 +2,16 @@
 
 {{ description }}
 
+{{#if request}}
 ### Params:
 ```ts
 {{ request }}
 ```
+{{/if}}
 
+{{#if response}}
 ### Response:
 ```ts
 {{ response }}
 ```
+{{/if}}
