--- a/packages/codegen/src/next/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/next/generators/readme/templates/README.md.hbs
@@ -154,3 +154,8 @@ The back channel challenge containing the id to store on the api and the message
 # Evm Api Hooks
 
 # Solana Api Hooks
+
+# 🧙‍♂️ Community
+
+- [Discord](https://discord.gg/moralis)
+- [Forum](https://forum.moralis.io)
