--- a/packages/codegen/src/next/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/next/generators/readme/templates/README.md.hbs
@@ -26,7 +26,7 @@ Please check the [official documentation of Moralis](https://docs.moralis.io/) f
 
 ### 1. Install Dependencies
 
-Make sure to have `next`, `react`, `react-dom` and `moralis` installed as dependencies, then install `@moralisweb3/next`
+Make sure to have `next`, `react` and `react-dom` installed as dependencies, then install `@moralisweb3/next`
 
 In short:
 
