--- a/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
+++ b/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
@@ -6,10 +6,12 @@ import {
 } from '{{ names.commonUtils }}';
 import { FetchParams } from '../../../types';
 import useSWR from 'swr';
+import Moralis from 'moralis';
 
 export const {{ names.hook }} = (request: {{ names.request }}, fetchParams?: FetchParams) => {
+  const { deserializeResponse, serializeRequest } = operation
   const { data, error, mutate, isValidating } = useSWR<{{ names.response }}>(
-    ['{{ url }}', {operation, request}], 
+    ['{{ url }}', { deserializeResponse, request: serializeRequest(request, Moralis.Core) }], 
     fetcher, 
     {revalidateOnFocus: false, ...fetchParams}
   );
