chore(Next): README improvements

--- a/packages/codegen/src/next/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/next/generators/readme/templates/README.md.hbs
@@ -26,18 +26,18 @@ Please check the [official documentation of Moralis](https://docs.moralis.io/) f
 
 ### 1. Install Dependencies
 
-Make sure to have `next`, `react`, `react-dom` and `moralis` installed as dependencies, then install `@moralisweb3/next`
+Make sure to have `next`, `next-auth`, `react`, `react-dom` and `moralis` installed as dependencies, then install `@moralisweb3/next`
 
 In short:
 
 ```sh
-npm install moralis @moralisweb3/next next react react-dom
+npm install moralis @moralisweb3/next next next-auth react react-dom
 ```
 
 or
 
 ```sh
-yarn add moralis @moralisweb3/next next react react-dom
+yarn add moralis @moralisweb3/next next next-auth react react-dom
 ```
 
 > Make sure to also  `moralis` to the latest version, when you update `@moralisweb3/next`.
@@ -81,11 +81,11 @@ If you need help with setting up the boilerplate or have other questions - don't
 - [🔐 Authentication and Session Management with NextAuth](#️-authentication-and-session-management-with-nextauth)
 - [✨ Hook Usage Example](#️-hook-usage-example)
 - [⚙️ Hook Advanced Config](#️-hook-advanced-config)
-- [Authentication Api Hooks](#-authentication-api-hooks)
-  - [useAuthRequestChallengeSolana](#️-useAuthRequestChallengeSolana)
-  - [useAuthRequestChallengeEvm](#-useAuthRequestChallengeEvm)
-- [Evm Api Hooks](#-evm-api-hooks)
-- [Solana Api Hooks](#-solana-api-hooks)
+- [Authentication Api Hooks](#authentication-api-hooks)
+  - [useAuthRequestChallengeSolana](#️useAuthRequestChallengeSolana)
+  - [useAuthRequestChallengeEvm](#useAuthRequestChallengeEvm)
+- [Evm Api Hooks](#evm-api-hooks)
+- [Solana Api Hooks](#solana-api-hooks)
 - [🧙‍♂️ Community](#️-community)
 
 # 🔐 Authentication and Session Management with NextAuth
