docs: regenerate readmes

--- a/packages/codegen/src/next/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/next/generators/readme/templates/README.md.hbs
@@ -1,6 +1,6 @@
 <div align="center">
     <p align="center">
-      <img src="./.readme/MoralisLogo.png" alt="Moralis NextJS" />
+      <img src="https://raw.githubusercontent.com/MoralisWeb3/Moralis-JS-SDK/main/packages/next/.readme/MoralisLogo.png" alt="Moralis NextJS" />
     </p>
 </div>
 
@@ -24,21 +24,19 @@ Please check the [official documentation of Moralis](https://docs.moralis.io/) f
 
 ### 1. Install Dependencies
 
-Make sure to have `next`, `next-auth`, `react`, `react-dom` and `moralis` installed as dependencies, then install `@moralisweb3/next`
+Make sure to have `next`, `next-auth`, `react` and `react-dom` installed as dependencies, then install `@moralisweb3/next`
 
 In short:
 
 ```sh
-npm install moralis @moralisweb3/next next next-auth react react-dom
+npm install @moralisweb3/next next next-auth react react-dom
 ```
 
 or
 
 ```sh
-yarn add moralis @moralisweb3/next next next-auth react react-dom
+yarn add @moralisweb3/next next next-auth react react-dom
 ```
-
-> Make sure to also  `moralis` to the latest version, when you update `@moralisweb3/next`.
 
 ### 2. Create environment variables file
 
