added generated naming for meta

--- a/packages/create-moralis-dapp/src/generators/next/template/app/components/elements/Meta/Meta.tsx.tmpl
+++ b/packages/create-moralis-dapp/src/generators/next/template/app/components/elements/Meta/Meta.tsx.tmpl
@@ -3,8 +3,8 @@ import Head from 'next/head';
 const Meta = () => {
   return (
     <Head>
-      <title>Moralis Demo NextJS with NextAuth</title>
-      <meta name="description" content="Moralis Demo NextJS with NextAuth" />
+      <title><%- name %></title>
+      <meta name="description" content="<%- name %>" />
       <link rel="icon" href="/favicon.ico" />
     </Head>
   );
