--- a/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
+++ b/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
@@ -30,7 +30,7 @@ export const {{ names.hook }} = (
     return mutate(
       fetcher(endpoint, {
         deserializeResponse,
-        request: params ?? request,
+        request: serializeRequest(fetchRequest, Moralis.Core),
       }),
     );
   }, []);
