--- a/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
+++ b/packages/codegen/src/next/generators/hooks/templates/hook.ts.hbs
@@ -11,7 +11,7 @@ import useSWR from 'swr';
 
 export const {{ names.hook }} = (
   request?: {{ names.request }}, 
-  { revalidateOnMount = true, ...fetchParams }: FetchParams = {},
+  fetchParams?: FetchParams,
 ) => {
   const endpoint = '{{ url }}';
   const { deserializeResponse, serializeRequest } = operation;
@@ -19,7 +19,7 @@ export const {{ names.hook }} = (
   const { data, error, mutate, isValidating } = useSWR<{{ names.response }}>(
     [endpoint, request ? { deserializeResponse, request: serializeRequest(request, Moralis.Core) } : null], 
     fetcher, 
-    { revalidateOnFocus: false, revalidateOnMount, ...fetchParams }
+    { revalidateOnFocus: false, ...fetchParams }
   );
 
   const fetch = useCallback((params?: {{ names.request }}) => {
