--- a/packages/codegen/src/express/generators/server/templates/router.ts.hbs
+++ b/packages/codegen/src/express/generators/server/templates/router.ts.hbs
@@ -4,20 +4,15 @@ import {
   {{ this.name }},
 {{/each}}
 } from './resolvers';
-import Moralis from 'moralis'
 
 export class {{ name }} {
-  constructor(private apiKey: string) {}
 
-  public getRouter() {
-    if (!Moralis.Core.isStarted){
-      Moralis.start({ apiKey: this.apiKey })
-    }
+  static get Router() {
 
     const router = Router();
 
   {{#each resolvers}}
-    router.post('{{ this.urlPath }}', {{ this.name }})
+    router.{{ this.method }}('{{ this.urlPath }}', {{ this.name }})
   {{/each}}
   
     return router;
