--- a/packages/codegen/src/react/generators/readme/templates/README.md.hbs
+++ b/packages/codegen/src/react/generators/readme/templates/README.md.hbs
@@ -1,18 +1,18 @@
 <div align="center">
     <p align="center">
-      <img src="https://raw.githubusercontent.com/MoralisWeb3/Moralis-JS-SDK/main/packages/next/.readme/MoralisLogo.png" alt="Moralis NextJS" />
+      <img src="https://raw.githubusercontent.com/MoralisWeb3/Moralis-JS-SDK/main/packages/react/.readme/MoralisLogo.png" alt="Moralis NextJS" />
     </p>
 </div>
 
 <div align="center">
 
-![npm](https://img.shields.io/npm/v/@moralisweb3/next)
-![npm bundle size](https://img.shields.io/bundlephobia/minzip/@moralisweb3/next)
-![npm type definitions](https://img.shields.io/npm/types/@moralisweb3/next)
+![npm](https://img.shields.io/npm/v/@moralisweb3/react)
+![npm bundle size](https://img.shields.io/bundlephobia/minzip/@moralisweb3/react)
+![npm type definitions](https://img.shields.io/npm/types/@moralisweb3/react)
 
 </div>
 
-# `@moralisweb3/next`
+# `@moralisweb3/react`
 
 > Moralis Hooks for your NextJS project
 
@@ -24,42 +24,44 @@ Please check the [official documentation of Moralis](https://docs.moralis.io/) f
 
 ### 1. Install Dependencies
 
-Make sure to have `next`, `next-auth`, `react` and `react-dom` installed as dependencies, then install `@moralisweb3/next`
+Make sure to have `react` and `react-dom` installed as dependencies, then install `@moralisweb3/react`
 
 In short:
 
 ```sh
-npm install @moralisweb3/next next next-auth react react-dom
+npm install @moralisweb3/react react react-dom
 ```
 
 or
 
 ```sh
-yarn add @moralisweb3/next next next-auth react react-dom
+yarn add  @moralisweb3/react react react-dom
 ```
 
-### 2. Create environment variables file
+### 2. Add MoralisProvider
 
-Add a new file `.env.local` in project's root and provide a new variable with [Moralis API key](https://docs.moralis.io/docs/nextjs-dapp#add-moralis-to-your-nextjs-dapp):
-
-```sh
-MORALIS_API_KEY= ***
-```
-
-### 3. Create API route
-To use Moralis APIs in your NextJs project create a file `pages/api/moralis/[...moralis].ts` with following code:
+Then wrap your app in a <MoralisProvider>, and provide your apiKey to the `config` prop:
 
 ```js
-import { MoralisNextApi } from "@moralisweb3/next";
+import React from "react";
+import ReactDOM from "react-dom";
+import { MoralisProvider } from "@moralisweb3/react";
 
-export default MoralisNextApi({ apiKey: process.env.MORALIS_API_KEY });
+const config = { apiKey: 'YOUR_API_KEY' }
+
+ReactDOM.render(
+  <MoralisProvider config={config}>
+    <App />
+  </MoralisProvider>,
+  document.getElementById("root"),
+);
 ```
 
-You can provide a configuration object to the `MoralisNextApi`.
+TO_DO: You can provide a configuration object to the `MoralisNextApi`.
 
 # ⭐️ Star us
 
-If this "@moralisweb3/next" library helps you build your dapps faster - please star this project, every star makes us very happy!
+If this "@moralisweb3/react" library helps you build your dapps faster - please star this project, every star makes us very happy!
 
 # 🤝 Need help
 
@@ -87,16 +89,10 @@ If you need help with setting up the boilerplate or have other questions - don't
 - [Solana Api Hooks](#solana-api-hooks)
 - [🧙‍♂️ Community](#️-community)
 
-# 🔐 Authentication and Session Management with NextAuth
-
-The `@moralisweb3/next` library provides first class tools for web3 authentication. Using the [NextAuth.js](https://next-auth.js.org/) and our custom `MoralisNextAuthProvider()` you can implement web3 authentication you can create web3 authentication for any web3 wallet.
-
-Please follow [Sign In with MetaMask](https://docs.moralis.io/docs/sign-in-with-metamask) Tutorial for NextJS.
-
 # ✨ Hook Usage Examples
 
 ```jsx
-import { useEvmWalletTokenBalances } from '@moralisweb3/next'
+import { useEvmWalletTokenBalances } from '@moralisweb3/react'
 
 const App = () => {
   const { data: balance, error, fetch, isFetching } = useEvmWalletTokenBalances({ address: '0x...' })
@@ -112,12 +108,12 @@ const App = () => {
 }
 ```
 
-Basically, there are three options how to fetch data with `@moralisweb3/next` hooks:
+Basically, there are three options how to fetch data with `@moralisweb3/react` hooks:
 
 ## 1. Provide params directly to the hook
 In case all required params for the hook are defined you can provide them directly to the hook params. Data fetching in this case will be triggered automatically:
 ```jsx
-import { useEvmWalletTokenBalances } from '@moralisweb3/next'
+import { useEvmWalletTokenBalances } from '@moralisweb3/react'
 
 const App = () => {
   const { data: balance } = useEvmWalletTokenBalances({ address: '0x...' })
@@ -132,7 +128,7 @@ const App = () => {
 Sometimes you need to fetch data somewhere in your code or even fetch it twice with different variables. You can provide params to the `fetch()` function:
 ```jsx
 import { useState } from 'react';
-import { useEvmNativeBalance } from '@moralisweb3/next'
+import { useEvmNativeBalance } from '@moralisweb3/react'
 import { EvmChain } from 'moralis/common-evm-utils';
 
 const App = () => {
@@ -168,7 +164,7 @@ const App = () => {
 To disable auto data fetching after your component has been mounted you can set `revalidateOnMount = false`. Example:
 
 ```jsx
-import { useEvmWalletTokenBalances } from '@moralisweb3/next'
+import { useEvmWalletTokenBalances } from '@moralisweb3/react'
 
 const App = () => {
   const { data: balance, fetch } = useEvmWalletTokenBalances({ address: '0x...' }, { revalidateOnMount: false })
@@ -182,57 +178,17 @@ const App = () => {
 }
 ```
 
-# ⚙️ Hook Advanced Config
+{{#each hookGuides}}
+{{ this }}
+{{/each}}
 
-The `@moralisweb3/next` hooks use [SWR](https://swr.vercel.app/) for a better developer experience. You can provide [config object](https://swr.vercel.app/docs/options#options) to the hooks as it's shown bellow:
+# ⚙️ Advanced Config
+TO_DO:
+The `@moralisweb3/react` hooks use [SWR](https://swr.vercel.app/) for a better developer experience. You can provide [config object](https://swr.vercel.app/docs/options#options) to the hooks as it's shown bellow:
 
 ```jsx
 const { data } = useEvmWalletTokenBalances({ address: '0x...' }, { revalidateOnFocus: true })
 ```
-
-# Authentication Api Hooks
-
-## `useAuthRequestChallengeSolana()` 
-
-The back channel challenge containing the id to store on the api and the message to be signed by the user
-
-### Params:
-```ts
-{
-  address: SolAddressish;
-  network: SolNetworkish;
-  expirationTime?: DateInput;
-  notBefore?: DateInput;
-}; 
-```
-
-### Response:
-```ts
-{ id: string; message: string; profileId: string }; 
-```
-
-## `useAuthRequestChallengeEvm()` 
-
-The back channel challenge containing the id to store on the api and the message to be signed by the user
-
-### Params:
-```ts
-{
-  address: EvmAddressish;
-  chainId: EvmChainish;
-  expirationTime?: DateInput;
-  notBefore?: DateInput;
-}; 
-```
-
-### Response:
-```ts
-{ id: string; message: string; profileId: string }; 
-```
-
-# Evm Api Hooks
-
-# Solana Api Hooks
 
 # 🧙‍♂️ Community
 
