--- a/packages/codegen/src/react/generators/hooks/templates/hooks.ts.hbs
+++ b/packages/codegen/src/react/generators/hooks/templates/hooks.ts.hbs
@@ -5,16 +5,17 @@
 import {
   {{#each hooks}}
     {{ this.operation }},
+    {{ this.response }},
     {{#if this.request}}{{ this.request }},{{/if}}
   {{/each}}
 } from '{{ commonUtils }}';
-import { {{#each resolversToImport}}{{ this }},{{/each}} } from '../../resolvers';
+import { ResolverFetchParams, {{#each resolversToImport}}{{ this }},{{/each}} } from '../../resolvers';
 import Moralis from 'moralis'
 
 const { baseUrl } = Moralis.{{ module }};
 
 {{#each hooks}}
-export const {{ this.name }} = ({{#if this.request}}request?: {{ this.request }}{{/if}}) => {
-  return {{ this.resolverType }}({{ this.operation }}, baseUrl, {{#if this.request}}request{{else}}{}{{/if}});
+export const {{ this.name }} = ({{#if this.request}}request?: {{ this.request }},{{/if}} fetchParams?: ResolverFetchParams<{{ this.response }}{{#if this.isNullable}} | null{{/if}}>) => {
+  return {{ this.resolverType }}({{ this.operation }}, baseUrl, {{#if this.request}}request{{else}}{}{{/if}}, fetchParams);
 };
 {{/each}}
